# Jogo-da-Forca

./: .gitattributes  .gitignore  .gitkeep  CMakeLists.txt  README.md  forca  forca.cpp  rodar codigo.txt  vcpkg.json
files/: teste.html
files/custom/words/levels/: easy.txt
files/web/css/: fonts.css  game.css  loading.css
files/web/html/: example.html  game.html
files/web/js/: array.js  cefClient.js  files.js  game.js  jsconfig.json  strings.js  utils.js
files/web/js/types/: custom-prototypes.d.ts
files/webCopy/: home.css  home.html  newWords.html
files/words/custom/levels/: easy.txt  normal.txt
files/words/default/: words.json
files/words/default/levels/: hard.txt
include/: forcaCore.h  forcaEncrypt.h  forcaFiles.h  forcaInitialize.h  forcaInterface.h  forcaRegex.h  forcaStrings.h  forcaUtils.h
lib/: JogoDaForca.exp  JogoDaForca.lib
libs/ncurses/: Makefile  config.status  edit_man.sh  man_alias.sed
libs/ncurses/c++/: Makefile  demo
libs/ncurses/form/: Makefile
libs/ncurses/include/: Makefile  ncurses_cfg.h
libs/ncurses/include/ncursesw/: curses.h
libs/ncurses/man/: Makefile  ncursesw6-config.1
libs/ncurses/menu/: Makefile
libs/ncurses/misc/: Makefile  ncurses-config  run_tic.sed  run_tic.sh  terminfo.tmp
libs/ncurses/ncurses/: Makefile  make_hash  make_keys  report_offsets
libs/ncurses/panel/: Makefile
libs/ncurses/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
libs/ncurses/test/: Makefile  back_ground  background  blue  bs  cardfile  chgat  clip_printw  color_content  color_set  combine  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_tabs  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  dots_xcurses  dup_field  echochar  extended_color  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  inch_wide  inchs  (+46 more)
libs/pcre2/win/: .gitignore  AUTHORS.md  BUILD.bazel  CMakeLists.txt  ChangeLog  HACKING  LICENCE.md  MODULE.bazel  Makefile.am  Makefile.in  NEWS  NON-AUTOTOOLS-BUILD  RunGrepTest  RunTest  SECURITY.md  aclocal.m4  build.zig  config-cmake.h.in  configure  configure.ac  perltest.sh
libs/pcre2/win/.github/: codecov.yml  dependabot.yml
libs/pcre2/win/cmake/: FindEditline.cmake  FindReadline.cmake  pcre2-config-version.cmake.in  pcre2-config.cmake.in
libs/pcre2/win/doc/: index.html.src  pcre2-config.1  pcre2-config.txt  pcre2.3  pcre2.txt  pcre2_callout_enumerate.3  pcre2_code_copy.3  pcre2_code_copy_with_tables.3  pcre2_code_free.3  pcre2_compile.3  pcre2_compile_context_copy.3  pcre2_compile_context_create.3  pcre2_compile_context_free.3  pcre2_config.3  pcre2_convert_context_copy.3  pcre2_convert_context_create.3  pcre2_convert_context_free.3  pcre2_converted_pattern_free.3  pcre2_dfa_match.3  pcre2_general_context_copy.3  pcre2_general_context_create.3  pcre2_general_context_free.3  pcre2_get_error_message.3  pcre2_get_mark.3  pcre2_get_match_data_heapframes_size.3  pcre2_get_match_data_size.3  pcre2_get_ovector_count.3  pcre2_get_ovector_pointer.3  pcre2_get_startchar.3  pcre2_jit_compile.3  pcre2_jit_free_unused_memory.3  pcre2_jit_match.3  pcre2_jit_stack_assign.3  pcre2_jit_stack_create.3  pcre2_jit_stack_free.3  pcre2_maketables.3  pcre2_maketables_free.3  pcre2_match.3  pcre2_match_context_copy.3  pcre2_match_context_create.3  (+64 more)
libs/pcre2/win/m4/: pcre2_visibility.m4
libs/pcre2/win/maint/: .gitignore  132html  CheckMan  GenerateUcd.py  GenerateUcpTables.py  ManyConfigTests  PrepareRelease  README  RunManifestTest  RunPerlTest  UpdateCommon.py  UpdateDates.py  utf8.c
libs/pcre2/win/src/: config.h.generic  config.h.in  pcre2.h.in  pcre2_auto_possess.c  pcre2_chkdint.c  pcre2_compile.c  pcre2_compile_class.c  pcre2_config.c  pcre2_context.c  pcre2_convert.c  pcre2_dfa_match.c  pcre2_error.c  pcre2_extuni.c  pcre2_find_bracket.c  pcre2_fuzzsupport.c  pcre2_jit_compile.c  pcre2_jit_match.c  pcre2_jit_misc.c  pcre2_jit_test.c  pcre2_maketables.c  pcre2_match.c  pcre2_match_data.c  pcre2_ord2utf.c  pcre2_pattern_info.c  pcre2_printint.c  pcre2_serialize.c  pcre2_study.c  pcre2_substitute.c  (+8 more)
libs/pdcurses/: README.md
libs/pdcurses/common/: README.md  watcom.mif
libs/pdcurses/demos/: nctests.mif  ncurses_cfg.h  ptest.c  testcurs.c  tui.c
libs/pdcurses/docs/: HISTORY.md  IMPLEMNT.md  MANUAL.md  README.md  USERS.md  manext.awk  mkman.sh
libs/pdcurses/dos/: Makefile  Makefile.bcc  Makefile.wcc  README.md  pdcclip.c  pdcdisp.c  pdcdos.h  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c
libs/pdcurses/os2/: Makefile  Makefile.bcc  Makefile.wcc  README.md  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcos2.h  pdcscrn.c  pdcsetsc.c  pdcutil.c
libs/pdcurses/pdcurses/: README.md  addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  debug.c  delch.c  deleteln.c  getch.c  getstr.c  getyx.c  inch.c  inchstr.c  initscr.c  inopts.c  insch.c  insstr.c  instr.c  kernel.c  keyname.c  mouse.c  move.c  outopts.c  overlay.c  pad.c  panel.c  printw.c  refresh.c  scanw.c  scr_dump.c  scroll.c  slk.c  termattr.c  touch.c  util.c  (+1 more)
libs/pdcurses/sdl1/: Makefile  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c
libs/pdcurses/sdl2/: Makefile  Makefile.vc  README.md  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c  versions.mif
libs/pdcurses/wincon/: Makefile  Makefile.bcc  Makefile.vc  Makefile.wcc  README.md  pdcclip.c  pdckbd.c  pdcsetsc.c
libs/pdcurses/x11/: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcx11.h  sb.c  scrlbox.c  scrlbox.h  xcurses-config.in
resources/: resource.rc
src/: forca.cpp  forcaCore.cpp  forcaEncrypt.cpp  forcaFiles.cpp  forcaInitialize.cpp  forcaInterface.cpp  forcaRegex.cpp  forcaStrings.cpp  forcaUtils.cpp
web/: duo.html  game-duo.html  game-solo.html  game.html  home.css  home.html  solo.html
web/css/: duo.css  game.css  home.css  solo.css
(+35 files in other folders)
